--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Genos:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Khand&display=swap");
 
 body {
   background-color: #293948;
@@ -24,14 +25,42 @@ body {
   box-shadow: -5px 5px 5px black;
 }
 
-.header--picture {
+.--header-pic {
   width: 230px;
+  border-radius: 5px;
 }
 
 .--header > h1 {
   font-family: "Genos", sans-serif;
   font-size: 40px;
   letter-spacing: 0.1em;
-  color: white;
+  color: #fffffa;
   margin: 0;
+}
+
+.--header-title {
+  font-family: "Khand", sans-serif;
+  letter-spacing: 0.09rem;
+  font-size: 24px;
+  font-weight: 400;
+  color: #94ddb1;
+  margin: 0;
+}
+.--header-tag {
+  font-family: "Khand", sans-serif;
+  font-size: 20px;
+  letter-spacing: 0.25rem;
+  margin: 0;
+  color: #fffffa;
+}
+
+.--header-buttton-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 8px;
+}
+
+.--header-icons {
+  height: 16px !important;
 }
