--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Genos:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Khand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
 
 body {
   background-color: #293948;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 #root {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-top: 50vh;
+  padding-bottom: 50vh;
+  padding-top: 25vh;
 }
 
 .--card {
@@ -47,16 +51,17 @@ body {
   margin: 0;
 }
 .--header-tag {
-  font-family: "Khand", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 23px;
   letter-spacing: 0.35rem;
-  max-width: 53%;
+  max-width: 75%;
   margin: 0 auto;
   color: #fffffa;
   overflow: hidden;
   border-right: 0.01rem solid #fffffa;
   white-space: nowrap;
   animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite;
+  margin-bottom: 16px;
 }
 
 @keyframes typing {
@@ -87,4 +92,45 @@ body {
 
 .--header-icons {
   height: 16px !important;
+}
+
+.--main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 31%;
+}
+
+.--main-text {
+  margin: 0;
+  text-align: start;
+  width: 55%;
+}
+
+.--main-header {
+  color: #fffffa;
+  font-family: "Genos", sans-serif;
+  font-size: 26px;
+  margin: 16px 0px;
+}
+
+.--main-text {
+  color: #fffffa;
+  font-family: "Roboto Mono", monospace;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+
+  #root {
+    padding-top: 0;
+  }
+  .--main {
+    padding-left: 10%;
+  }
+  .--main-text {
+    width: 80%;
+  }
 }
