--- a/src/index.css
+++ b/src/index.css
@@ -137,9 +137,29 @@ body {
   color: #fffffa;
 }
 
+.aws-stats {
+  font-family: "Roboto Mono", monospace;
+  font-size: 22px;
+  color: #fffffa;
+  margin-bottom: 0;
+}
+
+.aws-stats.p {
+  font-size: 16px;
+  margin: 0;
+}
+
+.logo {
+  position: relative;
+  top: 18px;
+  left: -5px;
+  max-width: 42px;
+  height: auto;
+}
+
 @media only screen and (max-width: 768px) {
   body {
-    overflow: auto;
+    overflow: scroll;
   }
 
   #root {
